--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,19 @@ body{
   background-color: black;
   color: white
 }
+h2{
+  font-family: Verdana;
+  font-weight: normal;
+  font-size:50px;
+  color: white;
+  text-align: center;
+}
+h3{
+}
+.link{
+}
+.copy{
+}
+.describe{
+}
+
