--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,9 @@
 body{
   background-color: black;
-  color: white
+  color: white;
+  text-align: center; 
 }
+
 h2{
   font-family: Verdana;
   font-weight: normal;
@@ -9,12 +11,26 @@ h2{
   color: white;
   text-align: center;
 }
+
 h3{
+  font-family: Verdana;
+  font-weight:300;
+  font-size: 42px;  
 }
+
 .link{
+  color: Aquamarine;
+  font-size:16px;
 }
+
 .copy{
+  text-align: right;
+  color: gray;
 }
+
 .describe{
+  font-family: Verdana;
+  font-size: 21px;
+  color:gray;
 }
 
